# flardl

./: .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FUNDING.md  LICENSE.logo.txt  README.md  THEORY.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  qodana_code_quality.yml  release.yml  tests.yml  updater.yaml
analysis/: PDB_random_1000_sizes.tsv  calculate_size_dist.py  queue_depth_fit.py
docs/: conf.py  funding.md  index.md  reference.md  requirements.txt  theory.md
src/flardl/: __init__.py  common.py  dict_to_indexed_list.py  downloader.py  downloaders.py  instrumented_streams.py  mockdownloader.py  multidispatcher.py  queue_stats.py  server_defs.py  stream_stats.py
tests/: 0_test_queue_stats.py  __init__.py  test_0_queue_stats.py  test_0_stream_stats.py  test_1_multidispatcher.py  test_1_server_defs.py  test_2_multidispatcher.py  test_3_datadir.py  test_3_downloader.py  test_4_downloader.py
tests/testdata/: urls.txt
